fix(auth): enable development mode for test accounts and update role retrieval logic

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -13,4 +13,5 @@ AUTH_ENABLE_TEST_ACCOUNTS="true"
 
 E_CLASS_PLATFORM_SHORT_NAME="dev"
 E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
+E_CLASS_DEV_MODE="true"
 
