--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,4 @@ jobs:
           'AUTH_AUTH0_ROLES_CLAIM_KEY': ${{ secrets.AUTH_AUTH0_ROLES_CLAIM_KEY }}
           'E_CLASS_PLATFORM_SHORT_NAME': ${{ vars.E_CLASS_PLATFORM_SHORT_NAME}}
           'E_CLASS_PLATFORM_NAME': ${{ vars.E_CLASS_PLATFORM_NAME }}
+          'E_CLASS_DEV_MODE': 'true'
