--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -19,6 +19,9 @@
   "references": [
     {
       "path": "../../packages/models"
+    },
+    {
+      "path": "../../packages/auth"
     }
   ]
 }
