[TSK-825] feat(auth, models, translations, ui-kit): add package root to nx release publish taget of packages.

--- a/packages/ui-kit/project.json
+++ b/packages/ui-kit/project.json
@@ -13,6 +13,12 @@
         "port": 4400,
         "configDir": "packages/ui-kit/.storybook"
       }
+    },
+    "nx-release-publish": {
+      "executor": "@nx/js:release-publish",
+      "options": {
+        "packageRoot": "packages/ui-kit"
+      }
     }
   }
 }
