--- a/packages/auth/project.json
+++ b/packages/auth/project.json
@@ -6,6 +6,13 @@
     "implicitDependencies": ["models"],
     "tags": [],
     "// targets": "to see all targets run: nx show project auth --web",
-    "targets": {}
+    "targets": {
+      "nx-release-publish": {
+        "executor": "@nx/js:release-publish",
+        "options": {
+          "packageRoot": "packages/auth"
+        }
+      }
+    }
   }
   
