--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write # needed for provenance data generation
     timeout-minutes: 10
     steps:
@@ -28,8 +28,16 @@ jobs:
           node-version: 22
           registry-url: https://registry.npmjs.org/
 
+      - name: Change dependency versions to 'workspace:*'
+        run: python3 tools/update-dependency-versions.py -w . -s workspace
+        shell: bash
+
       - name: Install dependencies
         run: pnpm install
+        shell: bash
+
+      - name: Change back dependencies from 'workspace:*' to versions
+        run: python3 tools/update-dependency-versions.py -w . -s explicit -v ${{ github.event.release.tag_name }}
         shell: bash
 
       - name: Prepare packages
@@ -54,3 +62,18 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         #   NPM_CONFIG_PROVENANCE: true
+
+      - name: Revert back dependency versions to 'workspace:*' for local development
+        run: python3 tools/update-dependency-versions.py -w . -s workspace
+        shell: bash
+
+      - name: Commit changes for local development
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "chore: change dependencies to 'workspace:*' for local development" || echo "No changes to commit"
+          git push origin HEAD
+        shell: bash
