--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -87,5 +87,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore: change dependencies to 'workspace:*' for local development" || echo "No changes to commit"
-          git push origin HEAD
+          git push origin main
         shell: bash
