--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -80,9 +80,9 @@ jobs:
         run: python3 tools/update-dependency-versions.py -w . -s workspace
         shell: bash
 
-      - name: Commit changes for local development and create pull request
+      - name: Commit changes for local development
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PR_PAT }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -91,5 +91,11 @@ jobs:
           git add .
           git commit -m "chore: change dependencies to 'workspace:*' for local development" || echo "No changes to commit"
           git push origin chore_change_${{ github.event.release.tag_name }}_to_workspace
+        shell: bash
+
+      - name: Create PR to fix local development
+        env:
+          GITHUB_TOKEN: ${{ secrets.PR_PAT }}
+        run: |
           gh pr create --title "chore: change dependencies to 'workspace:*' for local development" --body "This PR changes dependencies to 'workspace:*' for local development, from ${{ github.event.release.tag_name }}" --base main --head ${BRANCH_NAME}
         shell: bash
