--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -23,8 +23,12 @@
     "@testing-library/react": "16.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
     "react": "19.0.0",
     "react-dropzone": "^14.3.5",
+    "slate": "^0.112.0",
+    "slate-history": "^0.110.3",
+    "slate-react": "^0.112.1",
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
     "zod": "^3.24.1"
