--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -31,7 +31,8 @@
     "slate-react": "^0.112.1",
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@mux/mux-player-react": "^3.3.0"
   },
   "publishConfig": {
     "access": "public"
