--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "@maany_shr/e-class-core": "^1.7.5",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "i18n": "^0.15.1",
     "lucide-react": "^0.473.0",
