--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maany_shr/e-class-auth",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -14,7 +14,7 @@
   "dependencies": {
     "zod": "^3.24.1",
     "next-auth": "5.0.0-beta.25",
-    "@maany_shr/e-class-models": "workspace:*"
+    "@maany_shr/e-class-models": "1.8.0"
   },
   "publishConfig": {
     "access": "public"
