--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "composite": false,
     "plugins": [
       {
         "name": "next"
