--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   },
   "private": true,
   "dependencies": {
+    "@maany_shr/e-class-cms-fastapi-sdk": "^1.9.4",
+    "@maany_shr/e-class-core": "^1.9.4",
     "@mux/mux-player-react": "^3.3.0",
     "@tailwindcss/postcss": "4.0.0-beta.8",
     "i18n": "^0.15.1",
+    "inversify": "^7.5.0",
     "lucide-react": "^0.473.0",
+    "minio": "^8.0.5",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
     "next-intl": "^3.26.3",
+    "pino": "^9.6.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "4.0.0-beta.8",
