--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@maany_shr/e-class-core": "^1.9.4",
     "@mux/mux-player-react": "^3.3.0",
     "@tailwindcss/postcss": "4.0.0-beta.8",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "i18n": "^0.15.1",
     "inversify": "^7.5.0",
     "lucide-react": "^0.473.0",
