feat(platform-e2e): add translations dependency and update tests for localization

--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -17,8 +17,11 @@
   ],
   "exclude": ["node_modules", "dist", "eslint.config.js"],
   "references": [
-    {
-      "path": "../../packages/models"
-    }
+      {
+        "path": "../../packages/models",
+      },
+      {
+        "path": "../../packages/translations",
+      },
   ]
 }
