--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -38,7 +38,8 @@
     "slate-react": "^0.112.1",
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "@storybook/react": "^8.4.7"
   },
   "publishConfig": {
     "access": "public"
