--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -43,7 +43,8 @@
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
     "zod": "^3.24.1",
-    "spark-md5": "^3.0.2"
+    "spark-md5": "^3.0.2",
+    "@storybook/react": "^8.4.7"
   },
   "publishConfig": {
     "access": "public"
