--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -11,8 +11,7 @@ AUTH_AUTH0_ROLES_CLAIM_KEY="YOUR_CONFIGURED_KEY_FOR_ROLES_CLAIM"
 # AUTH Test Accounts for Playwright testing using credentials workflow
 AUTH_ENABLE_TEST_ACCOUNTS="true"
 
-E_CLASS_PLATFORM_SHORT_NAME="dev"
-E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
+E_CLASS_PLATFORM_ID="1"
 E_CLASS_DEV_MODE="true"
 
 NEXT_PUBLIC_E_CLASS_PLATFORM_URL="http://localhost:3000"
