--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,11 +55,10 @@ jobs:
           'AUTH_AUTH0_ISSUER': ${{ secrets.AUTH_AUTH0_ISSUER }}
           'AUTH_AUTH0_AUTHORIZATION_URL': ${{ secrets.AUTH_AUTH0_AUTHORIZATION_URL }}
           'AUTH_AUTH0_ROLES_CLAIM_KEY': ${{ secrets.AUTH_AUTH0_ROLES_CLAIM_KEY }}
-          'E_CLASS_PLATFORM_SHORT_NAME': ${{ vars.E_CLASS_PLATFORM_SHORT_NAME}}
-          'E_CLASS_PLATFORM_NAME': ${{ vars.E_CLASS_PLATFORM_NAME }}
+          'E_CLASS_PLATFORM_ID': ${{ vars.E_CLASS_PLATFORM_ID }}
           'E_CLASS_DEV_MODE': 'true'
         shell: bash
-      
+
       - name: Print Environment Info
         run: pnpm exec nx report
         shell: bash
@@ -69,7 +68,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           echo "//registry.npmjs.org/:_authToken=\${NODE_AUTH_TOKEN}" >> ~/.npmrc
-          
+
       - name: Publish packages
         run: |
           pnpm config set //registry.npmjs.org/:_authToken ${NODE_AUTH_TOKEN}
