--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "@trpc/client": "^11.1.2",
-    "@trpc/next": "^11.1.2",
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
+    "@trpc/tanstack-react-query": "^11.1.2",
     "i18n": "^0.15.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.3",
@@ -24,6 +24,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
+    "superjson": "^2.2.2",
     "tailwindcss": "4.0.0-beta.8",
     "zod": "^3.24.1"
   },
