--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -17,11 +17,8 @@
   ],
   "exclude": ["node_modules", "dist", "eslint.config.js"],
   "references": [
-      {
-        "path": "../../packages/models",
-      },
-      {
-        "path": "../../packages/translations",
-      },
+    {
+      "path": "../../packages/models"
+    }
   ]
 }
