--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
         "moduleResolution": "node",
         "emitDeclarationOnly": true,
         "emitDecoratorMetadata": true,
+        "strictNullChecks": true,
         "experimentalDecorators": true,
         "importHelpers": true,
         "target": "ES2022",
