--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
+    "superjson": "^2.2.2",
     "tailwindcss": "4.0.0-beta.8",
     "zod": "^3.24.1"
   },
