--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^11.1.2",
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
+    "deep-equal-js": "^0.2.2",
     "i18n": "^0.15.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.3",
