--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -11,6 +11,7 @@
         }
     },
     "dependencies": {
+        "deep-equal-js": "^0.2.2",
         "zod": "^3.24.1"
     },
     "publishConfig": {
