--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -11,7 +11,8 @@
         }
     },
     "dependencies": {
-        "zod": "^3.24.1"
+        "zod": "^3.24.1",
+        "@dream-aim-deliver/dad-cats": "^0.9.9"
     },
     "publishConfig": {
         "access": "public"
