--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -26,6 +26,7 @@
     "ag-grid-react": "^33.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.473.0",
     "react": "19.0.0",
     "react-dropzone": "^14.3.5",
