feat: add CMS example pages and provider setup
- Add CMS example page with client and server components
- Create separate CMS client provider for CMS TRPC context
- Rename client-providers to mock-client-providers for clarity
- Add wired-pages layout with authentication and language support
- Update environment template with CMS REST URL
- Add @dream-aim-deliver/e-class-cms-rest dependency

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -18,3 +18,5 @@ NEXT_PUBLIC_E_CLASS_PLATFORM_URL="http://localhost:3000"
 NEXT_PUBLIC_E_CLASS_PLATFORM_LOGO_URL="https://static.wixstatic.com/media/9fe096_91d65ad491464eff8da1c0b2973b3f79~mv2.png/v1/fill/w_110,h_110,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/BA_Kreis_pos_500px.png"
 NEXT_PUBLIC_E_CLASS_PLATFORM_SHORT_NAME="dev"
 NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
+
+NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
