--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
     "i18n": "^0.15.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.3",
