--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -34,7 +34,8 @@
     "slate-react": "^0.112.1",
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "crypto-js": "^4.2.0"
   },
   "publishConfig": {
     "access": "public"
