--- a/packages/ui-kit/tsconfig.lib.json
+++ b/packages/ui-kit/tsconfig.lib.json
@@ -7,6 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "tsBuildInfoFile": "dist/tsconfig.lib.tsbuildinfo",
     "jsx": "react-jsx",
+    "strictNullChecks": true,
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
