--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "slate": "^0.112.0",
     "slate-history": "^0.110.3",
