feat: add platform name to headers and update related configurations

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -20,3 +20,4 @@ NEXT_PUBLIC_E_CLASS_PLATFORM_SHORT_NAME="dev"
 NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
 
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
+NEXT_PUBLIC_E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
