--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "zod": "^3.24.1",
     "next-auth": "5.0.0-beta.25",
-    "@maany_shr/e-class-models": "workspace:*"
+    "@maany_shr/e-class-models": "workspace:*",
+    "@trpc/client": "^11.1.2",
+    "@dream-aim-deliver/e-class-cms-rest": "1.0.2",
+    "superjson": "^2.2.2"
   },
   "publishConfig": {
     "access": "public"
