--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,6 +16,7 @@
     "next-auth": "5.0.0-beta.25",
     "@maany_shr/e-class-models": "workspace:*",
     "@trpc/client": "^11.1.2",
+    "@dream-aim-deliver/e-class-cms-rest": "1.0.2",
     "superjson": "^2.2.2"
   },
   "publishConfig": {
