--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -1,6 +1,7 @@
 # Authentication Secret - Can be added by `npx auth`. Read more: https://cli.authjs.dev
 AUTH_SECRET="SOME SECRET"
-
+NEXTAUTH_SECRET="SOME NEXTAUTH_SECRET",
+NEXTAUTH_URL="http://localhost:3000",
 # Auth0 Configuration
 AUTH_AUTH0_CLIENT_ID="YOUR_CLIENT_ID"
 AUTH_AUTH0_CLIENT_SECRET="YOUR_CLIENT_SECRET"
