--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -96,3 +96,98 @@ jobs:
           git push origin ${BRANCH_NAME}
           gh pr create --title "chore: change dependencies to 'workspace:*' for local development" --body "This PR changes dependencies to 'workspace:*' for local development, from ${{ github.event.release.tag_name }}" --base main --head ${BRANCH_NAME}
         shell: bash
+
+  build-and-push:
+    name: Build and Push Docker Images
+    runs-on: [self-hosted, org-gh-runner]
+    needs: test
+    permissions:
+      contents: write
+      pull-requests: write
+      packages: write
+
+    steps:
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.release.tag_name }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Install Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 23
+          registry-url: https://registry.npmjs.org/
+
+      - name: Install poetry
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install poetry
+    
+      - name: Install dependencies
+        run: |
+          cp .npmrc.template .npmrc
+          sed -i "s/\$DAD_GH_NPM_TOKEN/${{ secrets.DAD_GH_NPM_TOKEN }}/g" .npmrc
+          pnpm install --frozen-lockfile
+          pnpm exec playwright install --with-deps
+        shell: bash
+
+      - name: Build platform
+        run: |
+          pnpm nx run platform:build --no-cloud
+        shell: bash
+
+      - name: Docker meta (platform)
+        id: meta-platform
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/e-class-platform
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest,enable={{is_default_branch}}
+          labels: |
+            org.opencontainers.image.title=E-Class Platform
+            org.opencontainers.image.description=Production-ready NextJS Application for E-Class Platforms
+            org.opencontainers.image.vendor=Dad AI
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push platform
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: ${{ steps.meta-platform.outputs.tags }}
+          labels: ${{ steps.meta-platform.outputs.labels }}
+          file: ./apps/platform/Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          provenance: false
+          sbom: false
+     
