--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -101,7 +101,7 @@ jobs:
 
   build-and-push:
     name: Build and Push Docker Images
-    runs-on: [self-hosted, org-gh-runner]
+    runs-on: ubuntu-latest
     needs: test
     permissions:
       contents: write
