--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
-    "@types/crypto-js": "^4.2.2",
-    "crypto-js": "^4.2.0",
     "i18n": "^0.15.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.3",
@@ -28,6 +26,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server": "link:@trpc/next-layout/server",
+    "spark-md5": "^3.0.2",
     "superjson": "^2.2.2",
     "tailwindcss": "4.0.0-beta.8",
     "zod": "^3.24.1"
@@ -73,6 +72,7 @@
     "@types/node": "18.16.9",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/spark-md5": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "@vitejs/plugin-react": "^4.3.4",
