--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -26,6 +26,8 @@
     "ag-grid-react": "^33.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.473.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
