--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -36,7 +36,7 @@
     "tailwind-merge": "^2.5.5",
     "vitest": "^2.1.8",
     "zod": "^3.24.1",
-    "crypto-js": "^4.2.0"
+    "spark-md5": "^3.0.2"
   },
   "publishConfig": {
     "access": "public"
