Make configuration flexible for minio images

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -22,3 +22,7 @@ NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
 
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
 NEXT_PUBLIC_E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
+
+MINIO_HOSTNAME=localhost
+MINIO_PORT=9000
+MINIO_PROTOCOL=http
