--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@trpc/react-query": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/html2pdf.js": "^0.10.0",
+    "crypto-js": "^4.2.0",
+    "html2pdf.js": "^0.12.0",
     "i18n": "^0.15.1",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.473.0",
     "next": "15.1.3",
     "next-auth": "5.0.0-beta.25",
