--- a/apps/cms/project.json
+++ b/apps/cms/project.json
@@ -6,5 +6,9 @@
   "implicitDependencies": ["ui-kit", "models", "translations"],
   "tags": [],
   "// targets": "to see all targets run: nx show project cms --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "dependsOn": ["models:build", "ui-kit:build", "translations:build", "auth:build"]
+    }
+  }
 }
