--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ permissions:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
-    environment: CI
+    runs-on: [self-hosted, org-gh-runner]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
