--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   main:
     runs-on: [self-hosted, org-gh-runner]
+    environment: CI
     steps:
       - name: Checkout
         uses: actions/checkout@v4
