fix: update cms-fastapi image version to 2.4.4 and adjust CI workflow to skip Nx cache

--- a/apps/cms/project.json
+++ b/apps/cms/project.json
@@ -6,9 +6,5 @@
   "implicitDependencies": ["ui-kit", "models", "translations"],
   "tags": [],
   "// targets": "to see all targets run: nx show project cms --web",
-  "targets": {
-    "build": {
-      "dependsOn": ["models:build", "ui-kit:build", "translations:build", "auth:build"]
-    }
-  }
+  "targets": {}
 }
