fix: change CI runner to use ubuntu-latest instead of self-hosted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   main:
-    runs-on: [self-hosted, org-gh-runner]
+    runs-on: ubuntu-latest
     environment: CI
     steps:
       - name: Checkout
