feat: Update environment configuration and refactor platform-related environment variables

--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -1,28 +1,28 @@
 # Authentication Secret - Can be added by `npx auth`. Read more: https://cli.authjs.dev
 AUTH_SECRET="SOME SECRET"
-NEXTAUTH_SECRET="SOME NEXTAUTH_SECRET",
-NEXTAUTH_URL="http://localhost:3000",
+
 # Auth0 Configuration
 AUTH_AUTH0_CLIENT_ID="YOUR_CLIENT_ID"
 AUTH_AUTH0_CLIENT_SECRET="YOUR_CLIENT_SECRET"
 AUTH_AUTH0_ISSUER="YOUR_ISSUER"
 AUTH_AUTH0_AUTHORIZATION_URL="YOUR_AUTHORIZATION_URL"
+AUTH_AUTH0_ROLES_CLAIM="YOUR_ROLES_CLAIM"
 AUTH_AUTH0_ROLES_CLAIM_KEY="YOUR_CONFIGURED_KEY_FOR_ROLES_CLAIM"
 
 # AUTH Test Accounts for Playwright testing using credentials workflow
 AUTH_ENABLE_TEST_ACCOUNTS="true"
 
-E_CLASS_PLATFORM_ID="1"
+# Platform Configuration
 E_CLASS_DEV_MODE="true"
 
+# Public Environment Variables (client-side accessible)
+NEXT_PUBLIC_E_CLASS_PLATFORM_SHORT_NAME="dev"
+NEXT_PUBLIC_E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
 NEXT_PUBLIC_E_CLASS_PLATFORM_URL="http://localhost:3000"
 NEXT_PUBLIC_E_CLASS_PLATFORM_LOGO_URL="https://static.wixstatic.com/media/9fe096_91d65ad491464eff8da1c0b2973b3f79~mv2.png/v1/fill/w_110,h_110,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/BA_Kreis_pos_500px.png"
-NEXT_PUBLIC_E_CLASS_PLATFORM_SHORT_NAME="dev"
-NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
-
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
-NEXT_PUBLIC_E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
 
-MINIO_HOSTNAME=localhost
-MINIO_PORT=9000
-MINIO_PROTOCOL=http
+# S3/Storage Configuration
+S3_HOSTNAME="localhost"
+S3_PORT="9000"
+S3_PROTOCOL="http"
