--- a/apps/platform-e2e/tsconfig.json
+++ b/apps/platform-e2e/tsconfig.json
@@ -1,24 +1,26 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "allowJs": true,
-    "outDir": "./dist/out-tsc",
-    "sourceMap": false
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.js",
-    "playwright.config.ts",
-    "src/**/*.spec.ts",
-    "src/**/*.spec.js",
-    "src/**/*.test.ts",
-    "src/**/*.test.js",
-    "src/**/*.d.ts"
-  ],
-  "exclude": ["node_modules", "dist", "eslint.config.js"],
-  "references": [
-    {
-      "path": "../../packages/models"
-    }
-  ]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "allowJs": true,
+        "outDir": "./dist/out-tsc",
+        "sourceMap": false
+    },
+    "include": [
+        "**/*.ts",
+        "**/*.js",
+        "playwright.config.ts",
+        "src/**/*.spec.ts",
+        "src/**/*.spec.js",
+        "src/**/*.test.ts",
+        "src/**/*.test.js",
+        "src/**/*.d.ts"
+    ],
+    "exclude": ["node_modules", "dist", "eslint.config.js"],
+    "references": [
+        { "path": "../../packages/auth" },
+        { "path": "../../packages/translations" },
+        { "path": "../../packages/models" },
+        { "path": "../../packages/ui-kit" },
+        { "path": "../platform" }
+    ]
 }
