chore: update e-class-cms-rest version to 2.6.3 in package.json and pnpm-lock.yaml, and add it to rollup external dependencies

--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "zod": "^3.24.1",
-        "@dream-aim-deliver/dad-cats": "^0.13.0"
+        "@dream-aim-deliver/dad-cats": "^0.13.0",
+        "@dream-aim-deliver/e-class-cms-rest": "2.6.3"
     },
     "publishConfig": {
         "access": "public"
