--- a/docker-compose.yml.template
+++ b/docker-compose.yml.template
@@ -102,7 +102,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: db
-      POSTGRES_MAX_CONNECTIONS: 1000
+    command: ["postgres", "-c", "max_connections=500"]
 
   adminer:
     image: adminer
