fix(platform,cms): resolve hairpin NAT issue for server-side cms-rest requests
Server-side TRPC requests were failing with ECONNRESET in Kubernetes
when using the public URL, which created hairpin NAT routing through
the external load balancer.

Changes:
- Add E_CLASS_CMS_REST_URL environment variable for internal cluster URL
- Update server-side TRPC clients to prioritize internal URL over public URL
- Add env schema validation for new variable in both apps
- Update .env.local.template files with new variable for local development

In Kubernetes, server-side requests now use the internal cluster URL
(http://cms-rest.eclass.svc.cluster.local:5173) avoiding the hairpin
routing issue. Client-side requests continue using the public URL.
Local development works seamlessly with both URLs pointing to localhost.

--- a/apps/cms/.env.local.template
+++ b/apps/cms/.env.local.template
@@ -19,6 +19,7 @@ E_CLASS_DEV_MODE="true"
 NEXT_PUBLIC_E_CLASS_RUNTIME="cms"
 NEXT_PUBLIC_APP_URL="https://localhost:3000"
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
+E_CLASS_CMS_REST_URL="http://localhost:5173"
 NEXT_PUBLIC_CONTACT_EMAIL="example@mail.com"
 NEXT_PUBLIC_CMS_BACKGROUND_IMAGE_URL="https://example.com/background.jpg"
 
