--- a/apps/platform/.env.local.template
+++ b/apps/platform/.env.local.template
@@ -19,6 +19,7 @@ NEXT_PUBLIC_E_CLASS_RUNTIME="eclass-dev"
 NEXT_PUBLIC_E_CLASS_PLATFORM_NAME="E-Class Dev Platform"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_E_CLASS_CMS_REST_URL="http://localhost:5173"
+E_CLASS_CMS_REST_URL="http://localhost:5173"
 
 # S3/Storage Configuration
 S3_HOSTNAME="localhost"
